--- a/beginner/lakshya_bansal.html
+++ b/beginner/lakshya_bansal.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ⚡>
+<html amp>
 <head>
   <meta charset="utf-8">
   <title>amp-carousel - Example 1</title>
@@ -10,8 +10,7 @@
   <link rel="canonical" href="https://preview.amp.dev/documentation/components/amp-carousel.example.1.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-</head>
-<style amp-custom>
+  <style amp-custom>
       body{
           
           background-color: #f2f2f2;
@@ -25,7 +24,9 @@
         color: black;
         
       }
-  </style>
+    </style>
+</head>
+
 <body>
     <center>
       <h1>My Portfolio</h1>
