Piyush(updates for Assignment-2)

--- a/beginner/piyush_kumar.html
+++ b/beginner/piyush_kumar.html
@@ -167,7 +167,7 @@
 
                 <amp-image-lightbox id="lightbox1" layout="nodisplay"></amp-image-lightbox>
 
-                <amp-img on="tap:lightbox1" role="button" tabindex="0" src="https://drive.google.com/thumbnail?id=1ggElx8JD72SqbSW_QJ0EM3pjUOpSIJoq" layout="responsive" width="360" height="360"></amp-img>
+                <amp-img on="tap:lightbox1" role="button" tabindex="0" src="https://drive.google.com/thumbnail?id=1ggElx8JD72SqbSW_QJ0EM3pjUOpSIJoq" layout="responsive" width="100" height="100"></amp-img>
 
 
 
@@ -232,6 +232,7 @@
             <amp-carousel id="custom-button" width="400" height="300" layout="responsive" type="slides" autoplay delay="2000">
                 <amp-youtube data-videoid="4ht80uzIhNs" layout="responsive" width="10" height="10"></amp-youtube>
                 <amp-youtube data-videoid="c8zRY0cBALE" layout="responsive" width="10" height="10"></amp-youtube>
+                <amp-youtube data-videoid="j6Keg3XKKjM" layout="responsive" width="10" height="10"></amp-youtube>
                 <amp-youtube data-videoid="j6Keg3XKKjM" layout="responsive" width="10" height="10"></amp-youtube>
             </amp-carousel>
         </div>
